--- a/templates/wooclap/envoyerEnonce.html
+++ b/templates/wooclap/envoyerEnonce.html
@@ -1,22 +1,22 @@
-{% extends 'partials/base.html' %} {% block main %}
+{% extends 'partials/base.html' %} 
 
+{% block main %}
 <div class="mid double">
-    <div class="code">
-        <form action="/EnvoyerEnonce" method="POST">
-            <div>
-                <h3>Caster Une Question</h3>
+    <div class="caster">
+        <h1>Caster une question</h1>
+        <form action="/envoyerEnonce" method="POST">
+            <div class="listeCaster">
                 <table>
                     <tr class="top">
-                        <td>Sélectionner</td>
                         <td>Questions</td>
                     </tr>
                     {% for question in listeQuestions %}
                     <tr>
-                        <td><input type="radio" value="{{question.idQ}}" name="radio"></td>
                         <td class="left" id="{{question.idQ}}">{{question.enonce}}</td>
                         <script>                                                /* converti chaque énoncé */
                             $('#{{question.idQ}}').html(converter.makeHtml($('#{{question.idQ}}').text()));
                         </script>
+                        <td style="border:none;width:5px;"><input type="radio" value="{{question.idQ}}" name="radio"></td>
                     </tr>
                     {% endfor %}
                 </table>
@@ -24,22 +24,21 @@
             <p><input class="button" type="submit" value="Caster une question" name="question" /></p>
         </form>
     </div>
-    <div class="code">
-        <form action="/EnvoyerEnonce" method="POST">
-            <div>   
-                <h3>Caster Une Séquence</h3>         
+    <div class="caster">
+        <h1>Caster une QCM</h1>  
+        <form action="/envoyerEnonce" method="POST">
+            <div class="listeCaster">  
                 <table>
                     <tr class="top">
-                        <td>Sélectionner</td>
                         <td>QCM</td>
                     </tr>
                     {% for qcm in listeQCM %}
                     <tr>
-                        <td><input type="radio" value="{{qcm.idQCM}}" name="radio"></td>
                         <td class="left" id="{{qcm.idQCM}}">{{qcm.Nom}}</td>
                         <script>                                                /* converti chaque énoncé */
                             $('#{{qcm.idQCM}}').html(converter.makeHtml($('#{{qcm.idQCM}}').text()));
                         </script>
+                        <td style="border:none;width:5px;"><input class="radioCaster" type="radio" value="{{qcm.idQCM}}" name="radio"></td>
                     </tr>
                     {% endfor %}
                 </table>
@@ -48,5 +47,4 @@
         </form>
     </div>
 </div>
-
 {% endblock %}
