--- a/templates/liste/lQCM.html
+++ b/templates/liste/lQCM.html
@@ -35,16 +35,15 @@
             <div class="liste">
                 <table>
                     <tr class="top">
-                        <td>Sélectionner</td>
                         <td>Questions</td>
                     </tr>
                     {%for element in ListesQuestions%}
                     <tr>
-                        <td><input type="checkbox" name="{{element.idQ}}"></td>
                         <td class="left" id="{{element.idQ}}">{{element.enonce}}</td>
                         <script>                                                /* converti chaque énoncé */
                             $('#{{element.idQ}}').html(converter.makeHtml($('#{{element.idQ}}').text()));
                         </script>
+                        <td style="border:none;width:10px"><input type="checkbox" name="{{element.idQ}}"></td>
                     </tr>
                     {%endfor%}
                 </table>
