--- a/templates/wooclap/RepondreQCM.html
+++ b/templates/wooclap/RepondreQCM.html
@@ -10,10 +10,10 @@
             <input type="hidden" value={{ListeQuestionsQcm[i].enonce}} name="question"> {%for key in ListeReponseQcm[i] %} {%if key.estNumerique%}
             <p><input type="text" pattern="\d*([.]\d{0,2})?" id="{{key.idR}}" name="reponse_num"></p>
             {%else%}
-            <p><input type="checkbox" id="{{key.idR}}" name="reponse_choix" /> {{key.reponse}}</p>
+            <p><input type="checkbox" id="{{key.idR}}" name="reponse_choix" value="{{key.idR}}" /> {{key.reponse}}</p>
             {%endif%} {%endfor%} {%endfor%}
         </div>
-        <Button>Envoyer</Button>
+        <Button>Prochain question</Button>
 </div>
 
 </form>
