--- a/templates/liste/lQCM.html
+++ b/templates/liste/lQCM.html
@@ -28,8 +28,7 @@
         </div>
     </div>
     <div class="menuNQcm">
-        <form action="/listeQCM" method="POST">
-            <!--ce form permet d'afficher la liste des question -->
+        <form action="/listeQCM" method="POST">  <!-- Ce formulaire permet d'afficher la liste des question -->
             <h1>Nouveau QCM</h1>
             <p>Donnez un titre à votre QCM : <input type="text" name="nomQcm" placeholder="Titre" /></p>
             <div class="liste">
