--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -8,6 +8,8 @@
     <link href="/static/style.css" rel="stylesheet"> 
     <script src="static/scripts.js"></script>
     {% include 'partials/biblio.html'%}
+    {% block head %}
+    {% endblock %}
     <title>{{title}}</title>
 </head>
 
