bouton suivant (marche bof)

--- a/templates/wooclap/casterEnonce.html
+++ b/templates/wooclap/casterEnonce.html
@@ -20,7 +20,7 @@
 {% block main %}
 <div class="menu">
     <h3>Code : {{idElement}}</h3>
-
+    <button onclick="nextQuestion()">Question suivante</button>
     <div>
         <button id="Q" onclick="hideAndShow(this.id)"> Cacher/Afficher </button>
         <div id="hideDivQ">
