--- a/templates/liste/lQCM.html
+++ b/templates/liste/lQCM.html
@@ -2,32 +2,30 @@
 
 {% block main %}
 <div class="mid double">
-    <div class="menuLQcm">
+    <div class="menuLQcm">   <!-- Partie liste de QCM -->
         <h1>Liste des QCM</h1>
         <div class="listeQCM">
-            
             <table>
                 <tr class="top">
                     <td>QCM</td>
                 </tr>
-                {% for QCM in listeQCM %}
-                <tr>
-                    <td class="left" id="{{QCM.idQCM}}"> <a href="{{ url_for('afficheQCM', id=QCM.idQCM)}}">{{QCM.Nom}}</a> </td> 
-                    <td style="border:none;width:2em">
-                        <a href="{{url_for('modifierQCM', id=QCM.idQCM)}}">
-                            <input style="margin-top: 4px; margin-bottom:-3px;" class="imgTab" type="image" src="/static/image/edit.png">
-                        </a>
-                        <a href="{{url_for('supprimerQCM', id=QCM.idQCM)}}">
-                            <input style="margin-top: 4px; margin-bottom:-3px;" class="imgTab" type="image" src="/static/image/delete.png">
-                        </a>
-                    </td> 
-                </tr>
-                
+                {% for QCM in listeQCM %} <!-- Affichage de tous les QCM -->
+                    <tr>
+                        <td class="left" id="{{QCM.idQCM}}"> <a href="{{ url_for('afficheQCM', id=QCM.idQCM)}}">{{QCM.Nom}}</a> </td> 
+                        <td style="border:none;width:2em">
+                            <a href="{{url_for('modifierQCM', id=QCM.idQCM)}}">
+                                <input style="margin-top: 4px; margin-bottom:-3px;" class="imgTab" type="image" src="/static/image/edit.png">
+                            </a>
+                            <a href="{{url_for('supprimerQCM', id=QCM.idQCM)}}">
+                                <input style="margin-top: 4px; margin-bottom:-3px;" class="imgTab" type="image" src="/static/image/delete.png">
+                            </a>
+                        </td> 
+                    </tr>
                 {% endfor %}
             </table>
         </div>
     </div>
-    <div class="menuNQcm">
+    <div class="menuNQcm">   <!-- Partie nouveau QCM -->
         <form action="/listeQCM" method="POST">  <!-- Ce formulaire permet d'afficher la liste des question -->
             <h1>Nouveau QCM</h1>
             <p>Donnez un titre à votre QCM : <input type="text" name="nomQcm" placeholder="Titre" /></p>
@@ -37,13 +35,13 @@
                         <td>Questions</td>
                     </tr>
                     {%for element in ListesQuestions%}
-                    <tr>
-                        <td class="left" id="{{element.idQ}}">{{element.enonce}}</td>
-                        <script>                                                /* converti chaque énoncé */
-                            $('#{{element.idQ}}').html(converter.makeHtml($('#{{element.idQ}}').text()));
-                        </script>
-                        <td style="border:none;width:10px"><input type="checkbox" name="{{element.idQ}}"></td>
-                    </tr>
+                        <tr>
+                            <td class="left" id="{{element.idQ}}">{{element.enonce}}</td>
+                            <script>                                                /* converti chaque énoncé */
+                                $('#{{element.idQ}}').html(converter.makeHtml($('#{{element.idQ}}').text()));
+                            </script>
+                            <td style="border:none;width:10px"><input type="checkbox" name="{{element.idQ}}"></td>
+                        </tr>
                     {%endfor%}
                 </table>
             </div>
