--- a/templates/question/modifQuestion.html
+++ b/templates/question/modifQuestion.html
@@ -12,7 +12,7 @@
                     <legend>Étiquettes</legend>
                     <ul>
                         {% for etiquette in etiquettes %} <!-- Pour chaque etiquette parmi les etiquettes -->
-                        <li><input type="checkbox" name="tag" value="{{ etiquette.idE }}"> {{ etiquette.nom }}</li>
+                            <li><input type="checkbox" name="tag" value="{{ etiquette.idE }}"> {{ etiquette.nom }}</li>
                         {% endfor %}
                     </ul>
                 </fieldset>
@@ -22,11 +22,11 @@
         <div>
             <h1>Modifier vos réponses</h1>
             {% for reponse in reponses %}   <!-- Pour chaque réponse parmis les réponses -->
-            {% if reponse.estNumerique %}
-            <p id="rep_num"><input type="text" id="Rep_num" name="R{{reponse.idR}}" pattern="\d*([.]\d{0,2})?" value="{{reponse.reponse}}"></p>
-            {% else %}
-            <p><textarea name="R{{reponse.idR}}" rows="4" cols="40">{{reponse.reponse}}</textarea></p>
-            {% endif %}
+                {% if reponse.estNumerique %}  <!-- Si la réponse est numérique -->
+                    <p id="rep_num"><input type="text" id="Rep_num" name="R{{reponse.idR}}" pattern="\d*([.]\d{0,2})?" value="{{reponse.reponse}}"></p>
+                {% else %}
+                    <p><textarea name="R{{reponse.idR}}" rows="4" cols="40">{{reponse.reponse}}</textarea></p>
+                {% endif %}
             {% endfor %}
             <p><input class="button" type="submit" value="Modifier" /></p>
         </div>
