--- a/templates/wooclap/RepondreQCM.html
+++ b/templates/wooclap/RepondreQCM.html
@@ -3,25 +3,25 @@
 {% block head %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
 <script>
-    const socket = io();
-    socket.on('connect', function() {
+    const socket = io();                             // Variable socket
+    socket.on('connect', function() {                // Détection quand on arrive sur la page
         socket.emit('testRQ', "Je suis dans repondre au question");
     });
-    var code;
-    var questions;
-    var reponses;
-    socket.on('receptionDonnees',(dcode,dquestions,dreponses) => {
-        code=dcode;
-        questions=dquestions.slice(1,dquestions.length-1).split(", ");
-        reponses=dreponses.slice(1,dreponses.length-1).split(", ");
+    var code;                         // Récupération du code à afficher
+    var questions;                    // Les questions...
+    var reponses;                     // Et les réponses
+    socket.on('receptionDonnees',(dcode,dquestions,dreponses) => {         // Réceptions des données
+        code=dcode;                                                        // Attribution des données à des variables pour les stockées
+        questions=dquestions.slice(1,dquestions.length-1).split(", ");     // (Exemple) On slice pour récupérer correctement ce qu'on veut
+        reponses=dreponses.slice(1,dreponses.length-1).split(", ");        // A modifier selon ce qui faut afficher
     });
-    socket.on('afficheQuestion',(data) => {
-        console.log(data)
-        $("#enonce").text(questions[data]);
-        if (reponses[data]==undefined){
+    socket.on('afficheQuestion',(data) => {             // Reception de la question à afficher
+        console.log(data)                               // A faire
+        $("#enonce").text(questions[data]);             // Son énoncé
+        if (reponses[data]==undefined){                 // Si c'est numérique si j'ai bien compris
             $("#reponse").append('<p><input type="text" pattern="\d*([.]\d{0,2})?"></p>');
         }else{
-            reponses[data].forEach((r) => {
+            reponses[data].forEach((r) => {             // Marche pas mais supposé afficher les réponses
                 $("#reponse").append(r);
             });
         }
@@ -39,7 +39,7 @@
     </form>
 </div>
 
-<!-- Le goat a dit : "c'est statique donc impossible (+arguments)" et le goat a toujours raison -->
+<!-- Le goat a dit : "c'est statique donc impossible (+arguments)" du coup j'ai quand même gardé si tu veux edit -->
 
 <!-- <div class="menu">
     <form action="{{ url_for('repondreQCM', i=i)}}" method="POST">
