--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -8,7 +8,7 @@
         {% if session['nomU'] and session['role']=='enseignant' %}<li class="navBouton {% if page=='EnvoyerEnonce' %} active {% endif %}"><a href="/envoyerEnonce">Envoyer des enoncées</a></li>{% endif %}
         {% if session['nomU'] and session['role']=='enseignant' %}<li class="navBouton {% if page=='ListeEtudiants' %} active {% endif %}"><a href="/listeEtudiants">Consulter Etudiants</a></li>{% endif %}
         {% if session['nomU']=='ADMIN'and session['role']=='enseignant' %}<li class="navBouton {% if page=='ListeUtilisateurs' %} active {% endif %}"><a href="/listeUtilisateurs">Consulter Utilisateurs</a></li>{% endif %}
-        {% if session['nomU'] and session['role']=='etudiant' %}<li class="navBouton {% if page=='RepondreQCM' %} active {% endif %}"><a href="/repondreQCM/0">Repondre au Question</a></li>{% endif %}
+        {% if session['nomU'] and session['role']=='etudiant' %}<li class="navBouton {% if page=='RepondreQCM' %} active {% endif %}"><a href="/repondreQCM">Repondre aux Questions</a></li>{% endif %}
         {% if session['nomU'] %}<li class="deco"><a href="/deconnexion">Deconnexion</a></li>{% endif %}
     </ul>
 </nav>
