--- a/templates/wooclap/repondreQCM.html
+++ b/templates/wooclap/repondreQCM.html
@@ -15,7 +15,7 @@
     });
     socket.on('afficheQuestion', (data) => { // Reception de la question à afficher
         console.log(data) // A faire
-        $("#enonce").text(questions[data]); // Son énoncé
+        $("#enonce").text(questions[data].replace(/&#39;/g,"").replace('(','').replace(')','').slice(0,-1)); // Son énoncé
         if (reponses[data].estNumerique) { // Si c'est numérique si j'ai bien compris
             $("#reponses").append('<p><input type="text" pattern="\d*([.]\d{0,2})?"></p>');
         } else {
@@ -28,7 +28,7 @@
 {% endblock %} {% block main %}
 <div class="menu">
     <h1 id="enonce"></h1>
-    <form action="{{ url_for('repondreQCM', i=i)}}" method="POST">
+    <form action="{{ url_for('repondreQCM')}}" method="POST">
         <div id="reponses">
 
         </div>
